--- a/style.css
+++ b/style.css
@@ -190,6 +190,91 @@ div.continue-button button a {
     color: #fff;
 }
 
+div.conteiner{
+    animation-name: fade;
+    animation-duration: 1s;
+}
+
+
+div.title{
+    animation: move;
+    animation-duration: 1s;
+}
+
+div.login-button{
+    animation: move;
+    animation-duration: 1s;
+}
+
+div.input-box{ 
+    animation: move;
+    animation-duration: 1s;
+}
+
+div.input-box:nth-child(2){
+    
+    animation: move1;
+    animation-duration: 1s;
+}
+
+div.input-box:nth-child(4){
+    
+    animation: move1;
+    animation-duration: 1s;
+}
+
+div.input-box:nth-child(6){
+    
+    animation: move1;
+    animation-duration: 1s;
+}
+
+.form{
+    overflow: hidden;
+}
+
+div.gender-title{
+    animation: fede;
+    animation-duration: 1s;
+}
+
+div.gender-group{
+    animation: fade;
+    animation-duration: 1s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0;
+        transform: scale(0.9);
+    }to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes move {
+    from {
+        opacity: 0;
+        transform: translateX(-35%);
+    } to{
+        opacity: 1;
+        transform: translateX(0%);
+
+    }
+}
+
+@keyframes move1 {
+    from {
+        opacity: 0;
+        transform: translateX(60%);
+    } to{
+        opacity: 1;
+        transform: translateX(0%);
+
+    }
+}
+
 @media screen and (max-width: 1330px){
    div.form-img{
        display: none;
@@ -228,11 +313,3 @@ div.continue-button button a {
 
     }
 }
-
-
-
-
-
-
-
-
